SERVER-72621 truncate v_prime2